[package]
name = "pocsuite-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ipnetwork = "0.20.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
url = "2.4"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
colored = "2.0"
indicatif = "0.17"
rand = "0.8"
async-trait = "0.1"
redis = { version = "0.23", features = ["tokio-comp"] }
